Fix button-small alignment

--- a/client/styles/page.less
+++ b/client/styles/page.less
@@ -731,6 +731,19 @@ button.button-new-small {
         color: white;
       }
     }
+
+    .button-new-small-1 {
+      &:before {
+      // border: 1px solid @boxProductHover;
+      background: @boxProductHover;
+      box-shadow: @boxProductHover 0 2px 5px 0 inset;
+      box-shadow: darken(@boxProductHover, 5%) 0 -2px 5px 0 inset,
+                  lighten(@boxProductHover, 15%) 0 2px 5px 0 inset;
+      }
+      i::before {
+        color: white;
+      }
+    }
   }
 }
 
@@ -761,18 +774,35 @@ button.button-new-small {
         box-shadow: lighten(#E80000, 20%) 0 2px 5px 0 inset;
       }
     }
+
+    .button-new-small-1 {
+      &:before{
+        background: lighten(#E80000, 30%);
+        box-shadow: lighten(#E80000, 30%) 0 2px 5px 0 inset;
+      }
+
+      &:hover, &:focus {
+        &:before {
+          background: lighten(#E80000, 20%);
+          box-shadow: lighten(#E80000, 20%) 0 2px 5px 0 inset;
+        }
+      }
+    }
     
     .validation-warning {
       display: inline-block;
-      width: 16px;
-      height: 16px;
-      font-size: 16px;
-      border-radius: 16px;
+      width: 15px;
+      height: 15px;
+      font-size: 11px;
+      border-radius: 15px;
       color: #fff;
       background: #E80000;
       box-shadow: #E80000 0 2px 5px 0 inset;
       cursor: help;
       padding: 3px 0;
+      position: relative;
+      top:-2px;
+      margin-right: -2px;
 
       i {
         display: inline-block;
@@ -784,13 +814,13 @@ button.button-new-small {
           position: relative;
           display: inline-block;
           font-size: 9px;
-          width: 16px;
+          width: 15px;
           height: 11px;
           color: white;
           padding: 0;
           margin: 0;
           text-align: center;
-          top: 1px;
+          top: 0px;
         }
       }
     }
@@ -852,9 +882,9 @@ form {
       margin-bottom: 5px;
     }
     
-    .button-new-small, .validation-warning {
+    .button-new-small, .validation-warning, .button-new-small-1 {
       vertical-align: top;
-      margin-top: 4px;
+      margin-top: 5px;
       // position: relative;
       // top: px;
     }
@@ -1057,6 +1087,15 @@ form {
   margin-left: -2px;
 }
 
+.button-new-small-1 { //} ~ .button-new-small-1 {
+  margin-left: 2px;
+  margin-right: 1px;
+}
+
+.button-new-small-1 ~ .button-new-small-1 {
+  margin-left: 1px;
+}
+
 .row-view-new .row .details {
   h3 {
     margin-bottom: 10px;
@@ -1182,4 +1221,125 @@ form {
       text-decoration: line-through;
     }
   }
+}
+
+.button-new-small-1 {
+  @outerSize: 15px;
+  @outerPadding: 2px;
+  @iconSize: 11px;
+  @textSize: 11px;
+
+  // .buttonNew(@outerSize; @outerPadding; @iconSize; @textSize);
+  // .buttonNewColors(#999; #fff; fade(#999, 30%); transparent); 
+  width: 11px;
+  height: 11px;
+  display: inline-block;
+  // background: #faa;
+      text-align: center;
+  position: relative;
+      // vertical-align: middle;
+
+
+  &:before {
+    position: absolute;
+    left: calc(~"50% - " @outerSize / 2);
+    top: calc(~"50% - " @outerSize / 2);
+    .circle(@outerSize);
+    // border: 1px solid #000;
+    content:'.';
+    background: fade(#999, 30%);
+    color: transparent;
+    box-shadow: fade(#999, 50%) 0 2px 5px 0 inset;
+  }
+
+  i {
+    width: 11px;
+    height: 11px;
+    position: absolute;
+    left: 0;
+    // background: #fff;
+      vertical-align: top;
+
+    &:before {
+      font-size: 11px;
+      margin: 0;
+      color: white;
+      text-align: center;
+      vertical-align: middle;
+    }
+  }
+
+  &:hover, &:focus {
+    &:before {
+    background: @boxProductHover;
+    box-shadow: darken(@boxProductHover, 5%) 0 -2px 5px 0 inset,
+                lighten(@boxProductHover, 20%) 0 2px 5px 0 inset;
+    }
+    i::before {
+      color: white;
+    }
+  }
+
+  i.icon-add {
+    &:before {
+      margin-top: 1px;
+    }
+  }
+
+  i.icon-trash {
+    &:before {
+      margin-top: 0.5px;
+    }
+  }
+
+  i.icon-ok {
+    &:before {
+      margin-top: 0px;
+    }
+  }
+
+  i.icon-up-open {
+    &:before {
+      margin-top: -1.5px;
+    }
+  }
+
+  i.icon-down-open {
+    &:before {
+      margin-top: 0px;
+    }
+  }
+
+  // i.icon-ok {
+  //   .buttonIconNudge(0px; -0.5px);
+  // }
+
+  // i.icon-cancel {
+  //   .buttonIconNudge(0.5px; 0px);
+  // }
+
+  // i.icon-add {
+  //   .buttonIconNudge(0px; 0px);
+  // }
+
+  // i.icon-warning {
+  //   .buttonIconSize(9px);
+  //   .buttonIconNudge(0px; 1px);
+  // }
+
+  // i.icon-left-open {
+  //   .buttonIconNudge(-1px; 0.5px);
+  // }
+
+  // i.icon-right-open {
+  //   .buttonIconNudge(1px; 0.5px);
+  // }
+
+  // i.icon-up-open {
+  //   .buttonIconNudge(0px; -1.5px);
+  // }
+
+  // i.icon-down-open {
+  //   .buttonIconNudge(0px; -0.5px);
+  // }
 }
